--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <object data="tobara.svg" type="image/svg+xml">
+                     <img class="img-responsive" src="img/tobaralogo2.png" alt="">
+                    </object>
+
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
