--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-				<h2>Contact Me</h2>
+                    <h2>Contacto</h2>
 				<hr class="star-primary">
 			</div>
 		</div>
@@ -12,15 +12,15 @@
 				<form  action="//formspree.io/you@email.com" method="POST" name="sentMessage" id="contactForm" novalidate>
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
-							<label>Name</label>
-							<input type="text" name="name" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+							  <label>Nombre</label>
+                                <input type="text" class="form-control" placeholder="Nombre" id="name" required data-validation-required-message="Por favor escribe tu nombre.">
 							<p class="help-block text-danger"></p>
 						</div>
 					</div>
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
-							<label>Email Address</label>
-							<input type="email" name="_replyto" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+							   <label>Correo electrónico</label>
+                                <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Por favor ingresa tu correo.">
 							<p class="help-block text-danger"></p>
 						</div>
 					</div>
@@ -30,8 +30,8 @@
 					</div>
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
-							<label>Message</label>
-							<textarea rows="5" name="message" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+						  <label>Mensaje</label>
+                                <textarea rows="5" class="form-control" placeholder="Escribe un mensaje" id="message" required data-validation-required-message="Por favor ingresa un mensaje."></textarea>
 							<p class="help-block text-danger"></p>
 						</div>
 					</div>
@@ -39,7 +39,7 @@
 					<div id="success"></div>
 					<div class="row">
 						<div class="form-group col-xs-12">
-							<button type="submit" class="btn btn-success btn-lg">Send</button>
+							<button type="submit" class="btn btn-success btn-lg">Enviar</button>
 						</div>
 					</div>
 				</form>
