--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -7,9 +7,44 @@
                     <h2>Detalles</h2>
                     <hr class="star-primary">
                 </div>
-            </div>
+            </div>  
             <div class="row">
-               
+                   <div class="col-md-12">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-location-pin text-primary"></i>
+                                    <h3>Infórmate</h3>
+                                    <p class="text-">Conoce en tiempo real, ofertas cercanas de acuerdo a tu ubicación.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-share text-primary"></i>
+                                    <h3>Colabora</h3>
+                                    <p class="text">Comparte las ofertas disponibles de los lugares que visitas a diario.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-like text-primary"></i>
+                                    <h3>Comentarios y Valoración</h3>
+                                    <p class="text">Califica  las ofertas y a los usuarios para una mejor experiencia.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-social-facebook text-primary"></i>
+                                    <h3>Gratis y Sin Publicidad</h3>
+                                    <p class="text">Usa tu cuenta de Facebook y comparte Ofertas con tus amigos!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
             </div>
         </div>
     </section>
