Added field of contact form
this

--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -13,14 +13,14 @@
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
 							  <label>Nombre</label>
-                                <input type="text" class="form-control" placeholder="Nombre" id="name" required data-validation-required-message="Por favor escribe tu nombre.">
+                                <input  name="name" type="text" class="form-control" placeholder="Nombre" id="name" required data-validation-required-message="Por favor escribe tu nombre.">
 							<p class="help-block text-danger"></p>
 						</div>
 					</div>
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
 							   <label>Correo electrónico</label>
-                                <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Por favor ingresa tu correo.">
+                                <input  name="email" type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Por favor ingresa tu correo.">
 							<p class="help-block text-danger"></p>
 						</div>
 					</div>
@@ -31,7 +31,7 @@
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
 						  <label>Mensaje</label>
-                                <textarea rows="5" class="form-control" placeholder="Escribe un mensaje" id="message" required data-validation-required-message="Por favor ingresa un mensaje."></textarea>
+                                <textarea  name ="message" rows="5" class="form-control" placeholder="Escribe un mensaje" id="message" required data-validation-required-message="Por favor ingresa un mensaje."></textarea>
 							<p class="help-block text-danger"></p>
 						</div>
 					</div>
