--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <p>Tobara es una aplicación móvil para Android que permite a usuarios encontrar ofertas cercanas en tiempo real, en base a su ubicación. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Tobara además permite ser una real alternativa para pequeñas y medianas empresas que quieran mejorar sus ventas mediante una mayor difusión y mayor alcance, </p>
+                    <p>Tobara además permite ser una real alternativa para pequeñas y medianas empresas que quieran mejorar sus ventas mediante una mayor difusión y mayor alcance. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
