--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio_grid">Detalles</a>
+                        <a href="#portfolio">Detalles</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">Sobre nosotros</a>
